# discord.py-listen-overloads

./: .gitignore  README.md  README.rst  pyproject.toml  pyprojects.toml
.github/workflows/: python-publish.yml
discord-stubs/: audit_logs.pyi  client.pyi  components.pyi  embeds.pyi  emoji.pyi  interactions.pyi  raw_models.pyi  shard.pyi  template.pyi  widget.pyi
discord-stubs/app_commands/: __init__.pyi
discord-stubs/ext/commands/: bot.pyi  context.pyi  core.pyi  flags.pyi  hybrid.pyi
discord-stubs/ext/commands/events_overloads/: __init__.pyi  app_commands.pyi  automod..py  automod.pyi  channels..pyi  connection.pyi  debug.pyi  entitlements.pyi  ext_commands.py  ext_commands.pyi  guilds.pyi
discord-stubs/ext/tasks/: __init__.pyi
discord-stubs/types/: guild.pyi  integration.pyi  interactions.pyi  member.pyi  role.pyi  user.pyi
discord-stubs/ui/: select.pyi  view.pyi
events_overloads/: __init__.py  _types.py  core.py  event_decorator.py  events_enum.py  main.py
events_overloads/discord-stubs/discord/ext/commands/: __init__.pyi
events_overloads/protocols/: app_commands.py  channels.py  entitlements.py  gateway.py  guilds.py  members.py  reactions.py  roles.py  scheduled_events.py  threads.py  voice.py
events_overloads/typings/discord/ext/commands/: bot.pyi
listen_overloads/: __init__.py  __init__.pyi  __main__.pyi  abc.pyi  asset.pyi  automod.pyi  client.pyi  errors.pyi  events_enum.py  flags.pyi  gateway.pyi  member.pyi  message.pyi  mixins.pyi  permissions.pyi  player.pyi  raw_models.pyi  reaction.pyi  role.pyi  sticker.pyi  threads.pyi  voice_client.pyi  welcome_screen.pyi
listen_overloads/app_commands/: models.pyi  namespace.pyi  transformers.pyi
listen_overloads/discord/: _types.pyi  activity.pyi  audit_logs.pyi  channel.pyi  colour.pyi  components.pyi  enums.pyi  gateway.pyi  guild.pyi  http.pyi  interactions.pyi  mentions.pyi  object.pyi  opus.pyi  permissions.pyi  role.pyi  sku.pyi  stage_instance.pyi  state.pyi  team.pyi  template.pyi  user.pyi  utils.pyi  voice_client.pyi  voice_state.pyi
listen_overloads/discord/app_commands/: checks.pyi  commands.pyi  errors.pyi  translator.pyi  tree.pyi
listen_overloads/discord/ext/commands/: bot.pyi  cog.pyi  help.pyi  hybrid.pyi  parameters.pyi
listen_overloads/discord/ext/commands/events_overloads/: __init__.pyi  app_commands.py  stages.py
listen_overloads/discord/types/: appinfo.pyi  audit_log.pyi  automod.pyi  channel.pyi  command.pyi  components.pyi  gateway.pyi  interactions.pyi  message.pyi  role.pyi  sku.pyi  sticker.pyi
listen_overloads/discord/ui/: modal.pyi
listen_overloads/discord/webhook/: async_.pyi
listen_overloads/ext/commands/: bot.pyi  converter.pyi  core.pyi
listen_overloads/ext/commands/events_overloads/: integrations.py  interactions.py  messages.py
listen_overloads/lol/ext/commands/: bot.pyi
listen_overloads/protocols/: voice.py
listen_overloads/types/: automod.pyi  message.pyi  sticker.pyi  team.pyi  user.pyi
listen_overloads/typings/discord/: __init__.pyi  appinfo.pyi  flags.pyi  guild.pyi  integrations.pyi  invite.pyi  scheduled_event.pyi  team.pyi
listen_overloads/typings/discord/ext/commands/: cooldowns.pyi  errors.pyi
listen_overloads/typings/discord/types/: threads.pyi
listen_overloads/ui/: __init__.pyi  dynamic.pyi  item.pyi  select.pyi  text_input.pyi  view.pyi
listen_overloads/webhook/: sync.pyi
