[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord.py-listen-overloads"
description = "A stubs package for discord.py that adds overloads to the commands.Bot.listen decorator."
version = "2.3.2"
authors = [{ name = "Soheab_" }]
requires-python = ">=3.8"
keywords = [
    "discord.py",
    "dpy",
    "discord",
    "events",
    "stubs",
    "overloads",
    "listen"
]
license = { file = "LICENSE" }
dependencies = ["discord.py>=2.0.0, <3.0.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dynamic = ["readme"]

[project.urls]
homepage = "https://github.com/Soheab/discord.py-listen-overloads"
repository = "https://github.com/Soheab/discord.py-listen-overloads"

[tool.setuptools]
packages = [
    "discord-stubs",
    "discord-stubs.app_commands",
    "discord-stubs.ext",
    "discord-stubs.ext.commands",
    "discord-stubs.ext.commands.events_overloads",
    "discord-stubs.ext.tasks",
    "discord-stubs.types",
    "discord-stubs.ui",
    "discord-stubs.webhook",
]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.pyright]
include = [
    "discord-stubs",
    "discord-stubs/app_commands",
    "discord-stubs/ext",
    "discord-stubs/ext/commands",
    "discord-stubs/ext/commands/events_overloads",
    "discord-stubs/ext/tasks",
    "discord-stubs/types",
    "discord-stubs/ui",
    "discord-stubs/webhook",
]
exclude = ["**/__pycache__", "dist"]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportDuplicateImport = "warning"
reportDeprecated = "warning"
reportUnusedVariable = "none"
reportInvalidStubStatement = true
reportMissingTypeStubs = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@overload"]

[tool.black]
line-length = 120
include = '\.pyi?$'